--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,55 @@
      ],
 
     "name": "oat-sa/extension-tao-group",
+    "description" : "TAO extension to manage group",
     "type" : "tao-extension",
+    "authors" : [
+		{
+		"name" : "Open Assessment Technologies S.A.",
+		"homepage" : "http://www.taotesting.com"
+		},
+		{
+		"name": "Jérôme Bogaerts",
+		"role": "Developer"
+		},
+		{
+		"name": "Joel Bout",
+		"role": "Developer"
+		},
+		{
+		"name": "Bertrand Chevrier",
+		"role": "Developer"
+		},
+		{
+		"name": "Lionel Lecaque",
+		"role": "Developer"
+		},
+		{
+		"name": "Patrick Plichart",
+		"role": "Developer"
+		},
+		{
+		"name": "Dieter Raber",
+		"role": "Developer"
+		},
+		{
+		"name": "Somsack Sipasseuth",
+		"role": "Developer"
+		}
+	],
+	"support": {
+		"forum": "http://forum.taotesting.com",
+		"issues": "http://forge.taotesting.com"
+	},
+	"keywords" : [
+		"tao",
+		"oat",
+		"computer-based-assessment"
+	],
+	"homepage" : "http://www.taotesting.com",
+	"license" : [
+	"GPL-2.0"
+	],
     "extra" : {
     	"tao-extension-name" : "taoGroups"
     },
