--- a/composer.json
+++ b/composer.json
@@ -1,58 +1,70 @@
 {
-	"repositories" : [{
-			"type" : "vcs",
-			"url" : "git@github.com:oat-sa/oatbox-extension-installer.git"
-		}
-	],
-	"name" : "oat-sa/extension-tao-group",
-	"description" : "extension to manage group",
-	"type" : "tao-extension",
-	"authors" : [{
-			"name" : "Open Assessment Technologies S.A.",
-			"homepage" : "http://www.taotesting.com"
-		}, {
-			"name" : "Jérôme Bogaerts",
-			"role" : "Developer"
-		}, {
-			"name" : "Joel Bout",
-			"role" : "Developer"
-		}, {
-			"name" : "Bertrand Chevrier",
-			"role" : "Developer"
-		}, {
-			"name" : "Lionel Lecaque",
-			"role" : "Developer"
-		}, {
-			"name" : "Patrick Plichart",
-			"role" : "Developer"
-		}, {
-			"name" : "Dieter Raber",
-			"role" : "Developer"
-		}, {
-			"name" : "Somsack Sipasseuth",
-			"role" : "Developer"
-		}
-	],
-	"support" : {
-		"forum" : "http://forum.taotesting.com",
-		"issues" : "http://forge.taotesting.com"
-	},
-	"keywords" : [
-		"tao",
-		"oat",
-		"computer-based-assessment"
-	],
-	"homepage" : "http://www.taotesting.com",
-	"license" : "GPL-2.0-only",
-	"extra" : {
-		"tao-extension-name" : "taoGroups"
-	},
-		"autoload" : {
-		"psr-4" : {
-			"oat\\taoGroups\\" : ""
-		}
-	},
-	"require" : {
-		"oat-sa/oatbox-extension-installer" : "~1.1||dev-master"
-	}
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:oat-sa/oatbox-extension-installer.git"
+        }
+    ],
+    "name": "oat-sa/extension-tao-group",
+    "description": "extension to manage group",
+    "type": "tao-extension",
+    "authors": [
+        {
+            "name": "Open Assessment Technologies S.A.",
+            "homepage": "http://www.taotesting.com"
+        },
+        {
+            "name": "J\u00e9r\u00f4me Bogaerts",
+            "role": "Developer"
+        },
+        {
+            "name": "Joel Bout",
+            "role": "Developer"
+        },
+        {
+            "name": "Bertrand Chevrier",
+            "role": "Developer"
+        },
+        {
+            "name": "Lionel Lecaque",
+            "role": "Developer"
+        },
+        {
+            "name": "Patrick Plichart",
+            "role": "Developer"
+        },
+        {
+            "name": "Dieter Raber",
+            "role": "Developer"
+        },
+        {
+            "name": "Somsack Sipasseuth",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "forum": "http://forum.taotesting.com",
+        "issues": "http://forge.taotesting.com"
+    },
+    "keywords": [
+        "tao",
+        "oat",
+        "computer-based-assessment"
+    ],
+    "homepage": "http://www.taotesting.com",
+    "license": "GPL-2.0-only",
+    "extra": {
+        "tao-extension-name": "taoGroups"
+    },
+    "autoload": {
+        "psr-4": {
+            "oat\\taoGroups\\": ""
+        }
+    },
+    "require": {
+        "oat-sa/oatbox-extension-installer": "~1.1||dev-master",
+        "oat-sa/generis": "*",
+        "oat-sa/tao-core": "*",
+        "oat-sa/extension-tao-testtaker": "*"
+    }
 }
