--- a/composer.json
+++ b/composer.json
@@ -47,12 +47,15 @@
 	"extra" : {
 		"tao-extension-name" : "taoGroups"
 	},
-		"autoload" : {
+	"autoload" : {
 		"psr-4" : {
 			"oat\\taoGroups\\" : ""
 		}
 	},
 	"require" : {
-		"oat-sa/oatbox-extension-installer" : "~1.1||dev-master"
+		"oat-sa/oatbox-extension-installer" : "~1.1||dev-master",
+		"oat-sa/tao-core" : ">=46.14.4",
+		"oat-sa/generis" : ">=13.14.1",
+		"oat-sa/extension-tao-testtaker" : ">=7.7.3"
 	}
 }
