--- a/composer.json
+++ b/composer.json
@@ -54,8 +54,9 @@
 	},
 	"require" : {
 		"oat-sa/oatbox-extension-installer" : "~1.1||dev-master",
-		"oat-sa/tao-core" : ">=46.14.4",
-		"oat-sa/generis" : ">=13.14.1",
-		"oat-sa/extension-tao-testtaker" : ">=7.7.3"
+		"oat-sa/generis" : ">=14.0.0",
+		"oat-sa/tao-core" : ">=47.0.0",
+		"oat-sa/extension-tao-backoffice" : ">=6.0.0",
+		"oat-sa/extension-tao-testtaker" : ">=8.0.0"
 	}
 }
