--- a/composer.json
+++ b/composer.json
@@ -64,8 +64,8 @@
     "require": {
         "oat-sa/oatbox-extension-installer": "~1.1||dev-master",
         "oat-sa/generis": ">=15.22",
-        "oat-sa/tao-core": ">=50.24.6",
+        "oat-sa/tao-core": "dev-feature/AUT-2995",
         "oat-sa/extension-tao-backoffice": "dev-feature/AUT-2995",
-        "oat-sa/extension-tao-testtaker": ">=8.2.0"
+        "oat-sa/extension-tao-testtaker": "dev-feature/AUT-2995"
     }
 }
